@@ -3,18 +3,18 @@
     "sb" : {
       "url" : "https://initialization-host/"
     },
-    "cacert" : "/etc/ece/cacert1.pem",
-    "cert" : "/etc/ece/cert1.pem",
-    "key" : "/etc/ece/key1.pem"
+    "ca" : "/etc/ece/init_ca.pem",
+    "cert" : "/etc/ece/init_cert.pem",
+    "key" : "/etc/ece/init_key.pem"
   },
 
   "ssl_op" : {
     "sb" : {
       "url" : "https://operation-host/"
     },
-    "cacert" : "/etc/ece/cacert2.pem",
-    "cert" : "/etc/ece/cert2.pem",
-    "key" : "/etc/ece/key2.pem"
+    "ca" : "/etc/ece/op_ca.pem",
+    "cert" : "/etc/ece/op_cert.pem",
+    "key" : "/etc/ece/op_key.pem"
   },
 
   "log" : {
